[package]
name = "multiplayer_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "*"
warp = "0.3"

[dev-dependencies]
pretty_env_logger = "0.4"