[package]
name = "shockwave_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.10"
futures = "*"
warp = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
modular = "1.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
rand = "0.8.5"